# roth_planner

./: .gitignore  README.md  app.py  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
engine/: aca.py  asset_location.py  dividend_forecast.py  headroom.py  ira.py  irmaa.py  niit.py  portfolio_sync.py  scenario.py  tax.py
models/: household.py  ytd_income.py
pages/: dashboard.py  planner.py
tests/: conftest.py  test_engine.py
views/: aca_irmaa.py  asset_location.py  comparator.py  dashboard.py  planner.py  portfolio.py  rmd_squeeze.py  roth_eligibility.py  sweet_spot.py  ytd_income.py
